[package]
name = "developer-playground"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = { version = "0.2.95" }
miden-tx = { version = "0.5.0", default-features = false }
miden-lib = { version = "0.5.0", default-features = false }
miden-objects = { version = "0.5.0", default-features = false }
miden-crypto = { version = "0.11.0", default-features = false }
assembly = { package = "miden-assembly", version = "0.10.5", default-features = false }
vm-processor = { package = "miden-processor", version = "0.10.5", default-features = false }
rand = { version = "0.8", default-features = false }
rand_chacha =  "0.3"
winter-maybe-async = { version = "0.10" }
serde = { version = "1.0", features = ["derive"] }

[lib]
crate-type = ["cdylib", "rlib"]
